--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.12",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
+    "sort-by": "^1.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
