--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "sort-by": "^1.2.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
