--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "sort-by": "^1.2.0",
